<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.codefx.demo</groupId>
	<artifactId>java-x</artifactId>
	<version>9.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>9</maven.compiler.source>
		<maven.compiler.target>9</maven.compiler.target>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>1.1</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>9</version>
							<vendor>Oracle</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<!-- The flag add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
						is needed to get access to `@ReservedStackAccess` in `ReservedStackAccess` -->
					<compilerArgs>
						--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
